# industry_news

./: .gitignore  pyproject.toml  requirements.txt  setup.py
llm/: crawler.py
resources/: config.yml  prompt.txt
resources/ai/: config.yml
resources/ai/prompts/n_shot/: futuretools_n_shot.txt
resources/newsletter/: config.yml
resources/newsletter/prompts/: filter_prompt.txt
resources/prompts/: filter_prompt.txt  prompt.txt  summarize_prompt.txt
resources/prompts-newlsetter/: filter_prompt.txt  summarize_prompt.txt
resources/prompts-newlsetter/n_shot/: futuretools_n_shot.txt  hackernews_n_shot.txt  reddit_n_shot.txt
resources/prompts/n_shot/: futuretools_n_shot.txt  hackernews_n_shot.txt  reddit_n_shot.txt  researchhub_n_shot.txt
src/: industry_news.py  utils.py
src/crawler/: hackernews_crawler.py  http_tools.py
src/industry_news/: __main__.py  article.py  config.py  llm.py  markdown.py  sources.py  t  utils.py
src/industry_news/crawler/: hackernews_crawler.py
src/industry_news/digest/: article.py  news_digest.py
src/industry_news/fetcher/: article.py  fetcher.py  fetchers_init.py  futuretools_crawler.py  futuretools_scraper.py  hackernews_api.py  hackernews_crawler.py  hackernews_scraper.py  reddit_api.py  reddit_api_fetcher.py  researchhub_api.py  web_tools.py
